# builder-gym

./: .gitignore  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
cases/00-basic/: README.md  bench.config.json  package.json  webpack.config.js
cases/01-basic/: README.md  bench.config.json  package.json
cases/01-cache/: README.md  bench.config.json  learning.md  package.json  tasks.md  webpack.bad.config.js  webpack.config.js  webpack.good.config.js
cases/02-tree-shaking/: README.md  bench.config.json  learning.md  package.json  rollup.config.js  tasks.md  webpack.config.js
cases/03-split-vendor/: README.md  bench.config.json  learning.md  package.json  rollup.manual.config.js  tasks.md  webpack.bad.config.js  webpack.good.config.js
cases/04-runtime-chunk/: README.md  bench.config.json  learning.md  package.json  rspack.config.js  tasks.md  webpack.config.bad.js  webpack.config.good.js  webpack.runtime.bad.js  webpack.runtime.template.js
cases/05-migrate-to-rspack/: README.md  bench.config.json  learning.md  package.json  rspack.config.js  rspack.config.template.js  tasks.md  webpack.config.js  webpack.legacy.js
cases/06-lib-bundle/: README.md  bench.config.json  package.json  rollup.config.js  tasks.md  tsup.config.ts
cases/06-ts-lib/: README.md  consumer.example.ts  package.json  rollup.config.js  tsconfig.json  tsup.config.ts
cases/11-plugin-loader/plugins/rust-napi/i18n-collect-rs/: Cargo.toml  package.json
cases/11-plugin-loader/plugins/rust-napi/i18n-collect-rs/src/: lib.rs
scripts/: baseline.json  benchmark.js  mock-build.js
(+321 files in other folders)
