[package]
name = "i18n_collect_rs"
version = "0.1.0"
authors = ["build-gym"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "i18n_collect_rs"

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
regex = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
